@@ -37,6 +37,7 @@
 #include "plugins/MadDecoderPlugin.hxx"
 #include "plugins/SndfileDecoderPlugin.hxx"
 #include "plugins/Mpg123DecoderPlugin.hxx"
+#include "plugins/Mp4v2DecoderPlugin.hxx"
 #include "plugins/WildmidiDecoderPlugin.hxx"
 #include "plugins/MikmodDecoderPlugin.hxx"
 #include "plugins/ModplugDecoderPlugin.hxx"
@@ -53,6 +54,9 @@ const struct DecoderPlugin *const decoder_plugins[] = {
 #endif
 #ifdef HAVE_MPG123
 	&mpg123_decoder_plugin,
+#endif
+#ifdef HAVE_MP4V2
+	&mp4v2_decoder_plugin,
 #endif
 #ifdef ENABLE_VORBIS_DECODER
 	&vorbis_decoder_plugin,
